# path2md

./: .gitignore  README.md  example.md  path2md.py  pyproject.toml
path2md/: cli.py
