[tool.poetry]
name = "path2md"
version = "0.3.3"
description = "Input file or dir path, output markdown file(s)."
authors = ["bitnom <14287229+bitnom@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.12"
gitignore-parser = "^0.1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
path2md = "path2md.cli:main"
